--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing-subscriber = "0.3"
 nix = { version = "0.27", features = ["user", "fs", "ioctl"] }
 regex = "1.0"
 http = "1"
+signal-hook = "0.3"
 
 [profile.release]
 lto = true
