feat: Add multilingual support (French/English) with automatic AZERTY/QWERTY detection, systemd integration, and Deepgram Nova-3.

--- a/voice-keyboard.service
+++ b/voice-keyboard.service
@@ -5,7 +5,7 @@ After=graphical-session.target sound.target
 
 [Service]
 Type=simple
-ExecStart=/bin/bash -c 'XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR} exec /home/andycinquin/.local/bin/voice-keyboard-wrapper --test-stt'
+ExecStart=/bin/bash -c 'XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR} exec /home/andycinquin/.local/bin/voice-keyboard-wrapper'
 Restart=on-failure
 RestartSec=10s
 
